--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@
 }
 
 .forms .bg {
-    background-image: url(./bg.jpeg);
+    background-image: url(../assets/bg.jpeg);
     background-size: cover;
     background-position: center;
     height: 100%;
@@ -119,6 +119,9 @@
     color: #fff;
 }
 
+.form #fgt {
+    display: none;
+}
 
 @media screen and (max-width: 750px) {
     .forms {
